Enhance SimpleCommandLineArgumentProvider constructor
Updated constructor to handle null arguments and use an immutable list.

Signed-off-by: akshith30388 <akshithpola36@gmail.com>